# docs/swagger.json
@@ -207,7 +207,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "必须要登陆，文件ID就是在这里去拿的，图片等静态 文件可以直接访问/img/*获得，novel必须要经过/download",
+                "description": "必须要登陆",
                 "consumes": [
                     "text/html"
                 ],
@@ -215,31 +215,59 @@
                     "application/json"
                 ],
                 "tags": [
-                    "file",
-                    "volume"
+                    "archive"
                 ],
-                "summary": "上传文件",
+                "summary": "创建文章",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "类型，分为novel,img两个，如果是img则可以直接去静态文件请求",
-                        "name": "type",
+                        "description": "标题",
+                        "name": "title",
                         "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
-                        "description": "文件",
-                        "name": "file",
-                        "in": "formData",
-                        "required": true
+                        "description": "日文标题",
+                        "name": "japanese_title",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "作者",
+                        "name": "author",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "文章内容",
+                        "name": "content",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "隐藏内容",
+                        "name": "primary_content",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "封面，这个是个url地址",
+                        "name": "cover",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "标签，推荐使用/分割，例如 纯爱/治愈/等等 ",
+                        "name": "tag",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.FileResponse"
+                            "$ref": "#/definitions/serializer.ArchiveResponse"
                         }
                     },
                     "500": {
@@ -534,7 +562,6 @@
         },
         "/api/v1/comment/": {
             "get": {
-                "description": "获取单个评论的详细信息",
                 "consumes": [
                     "text/html"
                 ],
@@ -544,21 +571,50 @@
                 "tags": [
                     "comment"
                 ],
-                "summary": "获取评论详细",
+                "summary": "评论列表",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "评论ID",
+                        "description": "回复对象ID",
                         "name": "id",
-                        "in": "path",
-                        "required": true
+                        "in": "path"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "类型：1为文章，2为小说",
+                        "name": "type",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Pages",
+                        "name": "page",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "PageSize default is 10",
+                        "name": "page_size",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.CommentResponse"
+                            "$ref": "#/definitions/serializer.CommentListResponse"
                         }
                     },
                     "500": {
@@ -583,56 +639,43 @@
                     "application/json"
                 ],
                 "tags": [
-                    "novel"
+                    "comment"
                 ],
-                "summary": "创建小说",
+                "summary": "创建评论",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "小说标题",
+                        "description": "评论内容",
                         "name": "title",
                         "in": "formData",
                         "required": true
                     },
                     {
-                        "type": "string",
-                        "description": "小说作者",
-                        "name": "author",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "小说封面，URL，如果封面为空的话泽会自动替换。默认封面请检查conf.DefaultCover字段",
-                        "name": "cover",
-                        "in": "formData"
-                    },
-                    {
                         "type": "integer",
-                        "description": "小说简介",
-                        "name": "description",
-                        "in": "formData"
-                    },
-                    {
-                        "type": "boolean",
-                        "description": "是否完结",
-                        "name": "ended",
+                        "description": "评论类型。小说为：2 文章为：1 其余泽忽略",
+                        "name": "type",
                         "in": "formData",
                         "required": true
                     },
                     {
                         "type": "integer",
-                        "description": "目标等级：还未实现",
-                        "name": "level",
+                        "description": "如果type参数为1泽这是文章ID，如果type参数为2则是小说ID",
+                        "name": "raw",
                         "in": "formData",
                         "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "要返回用户的评论的id",
+                        "name": "reply",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.NovelResponse"
+                            "$ref": "#/definitions/serializer.CommentResponse"
                         }
                     },
                     "500": {
@@ -850,7 +893,7 @@
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "必须为管理员",
+                "description": "有这个接口的实现，但是暂未启用.jpg",
                 "consumes": [
                     "text/html"
                 ],
@@ -858,23 +901,21 @@
                     "application/json"
                 ],
                 "tags": [
-                    "novel",
-                    "category",
-                    "admin"
+                    "message"
                 ],
-                "summary": "添加小说分类关联",
+                "summary": "创建消息",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "小说ID",
-                        "name": "novel",
+                        "type": "string",
+                        "description": "消息内容",
+                        "name": "title",
                         "in": "formData",
                         "required": true
                     },
                     {
                         "type": "integer",
-                        "description": "分类ID",
-                        "name": "category",
+                        "description": "回复用户 ID",
+                        "name": "recv",
                         "in": "formData",
                         "required": true
                     }
@@ -883,7 +924,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serializer.Response"
+                            "$ref": "#/definitions/serializer.MessageResponse"
                         }
                     },
                     "500": {
@@ -1375,6 +1416,7 @@
         },
         "/api/v1/user/": {
             "get": {
+                "description": "如果ID为0就是查看自己",
                 "consumes": [
                     "text/html"
                 ],
@@ -1426,12 +1468,6 @@
                 ],
                 "summary": "更新用户信息",
                 "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "用户ID",
-                        "name": "id",
-                        "in": "path"
-                    },
                     {
                         "type": "string",
                         "description": "昵称",
@@ -2206,8 +2242,14 @@
                 "raw": {
                     "type": "integer"
                 },
+                "raw_title": {
+                    "type": "string"
+                },
                 "reply": {
                     "type": "integer"
+                },
+                "time": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
@@ -2421,6 +2463,9 @@
                 "subscribed": {
                     "type": "integer"
                 },
+                "tags": {
+                    "type": "string"
+                },
                 "title": {
                     "type": "string"
                 }
@@ -2505,8 +2550,14 @@
                 "avatar": {
                     "type": "string"
                 },
+                "bio": {
+                    "type": "string"
+                },
                 "created_at": {
                     "type": "integer"
+                },
+                "hito": {
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
@@ -2524,6 +2575,9 @@
                     "type": "string"
                 },
                 "user_name": {
+                    "type": "string"
+                },
+                "website": {
                     "type": "string"
                 }
             }
